--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -10,10 +10,10 @@
         android:title="Home"
         android:icon="@drawable/ic_home"/>
 
-    <item
-        android:id="@+id/favorite_menu"
-        android:title="History"
-        android:icon="@drawable/ic_history"/>
+<!--    <item-->
+<!--        android:id="@+id/favorite_menu"-->
+<!--        android:title="History"-->
+<!--        android:icon="@drawable/ic_history"/>-->
     <item
         android:id="@+id/account_menu"
         android:title="Lainnya"
