--- a/app/src/main/res/layout/activity_atur_jadwal_siram.xml
+++ b/app/src/main/res/layout/activity_atur_jadwal_siram.xml
@@ -106,7 +106,8 @@
                         android:textAlignment="center"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="17sp"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold"
+                        android:gravity="center_horizontal" />
                     <TextView
                         android:id="@+id/namaZona"
                         android:layout_width="match_parent"
@@ -116,7 +117,19 @@
                         android:textAlignment="center"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="17sp"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold"
+                        android:gravity="center_horizontal" />
+                    <TextView
+                        android:id="@+id/noZona"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:hint="No Lahan"
+                        android:textAlignment="center"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="17sp"
+                        android:textStyle="bold"
+                        android:gravity="center_horizontal" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
