--- a/app/src/main/res/layout/activity_siram_zona.xml
+++ b/app/src/main/res/layout/activity_siram_zona.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DaftarZona.SiramZona"
+    tools:context=".SiramZona.SiramZona"
     tools:ignore="VectorDrawableCompat">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/bgHeader"
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="160dp"
         android:background="@drawable/header_login"
         android:elevation="5dp" />
     <TextView
@@ -19,9 +19,10 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:elevation="5dp"
-        android:text="Pilih Berapa Lama"
+        android:text="IC-Shadoof"
         android:textColor="@color/white"
-        android:textSize="20sp" />
+        android:textStyle="italic"
+        android:textSize="25sp" />
     <TextView
         android:id="@+id/tvLogin"
         android:layout_width="wrap_content"
@@ -30,9 +31,9 @@
         android:transitionName="tvLogin"
         android:layout_alignLeft="@+id/tvDesc"
         android:elevation="5dp"
-        android:text="Anda Akan Menyiram.."
+        android:text="Siram Lahan"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="30sp"
         android:textStyle="bold" />
     <ImageView
         android:id="@+id/circle1"
@@ -41,7 +42,7 @@
         android:layout_below="@+id/bgHeader"
         android:layout_alignParentRight="true"
         android:layout_marginTop="-80dp"
-        android:layout_marginRight="-100dp"
+        android:layout_marginRight="-80dp"
         android:src="@drawable/circletransparant" />
 
     <ImageView
@@ -49,7 +50,7 @@
         android:layout_width="134dp"
         android:layout_height="134dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="-100dp"
+        android:layout_marginLeft="-80dp"
         android:layout_marginBottom="50dp"
         android:src="@drawable/circletransparant" />
 
@@ -82,7 +83,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="35dp">
+            android:layout_marginTop="10dp">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/CZonasatu"
@@ -131,10 +132,48 @@
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/macSiram"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:hint="Mac Address"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:gravity="center"
+                        android:textSize="17sp"
+                        android:textStyle="bold"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/nomorSiram"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="10dp"
+                            android:gravity="center"
+                            android:hint="Nomor Zona"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="17sp"
+                            android:textStyle="bold"/>
+                    <TextView
+                        android:id="@+id/namaZonaSiram"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
+                        android:hint="Nama Zona"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="17sp"
+                        android:textStyle="bold"/>
+                    </LinearLayout>
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
-                        android:text="Masukan lama penyiraman"
+                        android:text="Masukan Lama Penyiraman"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="17sp"
                         android:textStyle="bold"/>
@@ -165,6 +204,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
+                            android:layout_marginLeft="10dp"
                             android:text="Detik :"
                             android:textColor="@color/colorPrimaryDark"
                             android:textSize="17sp"
@@ -184,36 +224,36 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:layout_marginRight="30dp"
-                        android:layout_marginLeft="30dp"
+                        android:layout_marginRight="40dp"
+                        android:layout_marginLeft="40dp"
                         android:background="@drawable/bg_ui"
-                        android:text="Zona Satu Hidup"
+                        android:text="Siram Lahan"
                         android:textAllCaps="false"
                         android:textColor="@color/white" />
 
-                    <Button
-                        android:id="@+id/btnZona2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginRight="30dp"
-                        android:layout_marginLeft="30dp"
-                        android:background="@drawable/bg_ui"
-                        android:text="Zona Dua Hidup"
-                        android:textAllCaps="false"
-                        android:textColor="@color/white" />
+<!--                    <Button-->
+<!--                        android:id="@+id/btnZona2"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginTop="10dp"-->
+<!--                        android:layout_marginRight="30dp"-->
+<!--                        android:layout_marginLeft="30dp"-->
+<!--                        android:background="@drawable/bg_ui"-->
+<!--                        android:text="Zona Dua Hidup"-->
+<!--                        android:textAllCaps="false"-->
+<!--                        android:textColor="@color/white" />-->
 
-                    <Button
-                        android:id="@+id/btnZona3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginRight="30dp"
-                        android:layout_marginLeft="30dp"
-                        android:background="@drawable/bg_ui"
-                        android:text="Zona Tiga Hidup"
-                        android:textAllCaps="false"
-                        android:textColor="@color/white" />
+<!--                    <Button-->
+<!--                        android:id="@+id/btnZona3"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginTop="10dp"-->
+<!--                        android:layout_marginRight="30dp"-->
+<!--                        android:layout_marginLeft="30dp"-->
+<!--                        android:background="@drawable/bg_ui"-->
+<!--                        android:text="Zona Tiga Hidup"-->
+<!--                        android:textAllCaps="false"-->
+<!--                        android:textColor="@color/white" />-->
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
