--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -28,7 +28,8 @@
         android:text="Your Device"
         android:textColor="@color/colorWhite"
         android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:gravity="center_horizontal" />
     <ImageView
         android:id="@+id/circle1"
         android:layout_width="134dp"
@@ -113,7 +114,7 @@
                 android:layout_below="@+id/cv"
                 android:layout_alignLeft="@+id/cv"
                 android:layout_alignRight="@+id/cv"
-                android:layout_marginTop="110dp"
+                android:layout_marginTop="1.0dp"
                 android:gravity="bottom|end">
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
