--- a/app/src/main/res/layout/list_device.xml
+++ b/app/src/main/res/layout/list_device.xml
@@ -18,37 +18,38 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:gravity="center">
-        <TextView
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:id="@+id/Mac_"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Mac_Addres Device"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="18dp"
-            android:textStyle="normal" />
+<!--        <TextView-->
+<!--            android:layout_marginLeft="5dp"-->
+<!--            android:layout_marginRight="5dp"-->
+<!--            android:id="@+id/"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:hint="Mac_Addres Device"-->
+<!--            android:textAlignment="center"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textSize="18dp"-->
+<!--            android:textStyle="normal"-->
+<!--            android:gravity="center_horizontal" />-->
         <TextView
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:id="@+id/Nama"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/Mac_"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:hint="Nama Device"
             android:textColor="@color/black"
             android:textSize="18dp"
             android:textAlignment="center"
-            android:textStyle="normal" />
+            android:textStyle="normal"
+            android:gravity="center_horizontal" />
         <Button
             android:id="@+id/AddZona"
             android:layout_width="120dp"
             android:layout_height="28dp"
             android:layout_below="@+id/Nama"
             android:layout_centerInParent="true"
-            android:layout_marginTop="4dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/bg_ui"
             android:text="Tambah Zona"
@@ -56,7 +57,7 @@
             android:textSize="12dp"
             android:textStyle="normal" />
         <Button
-            android:id="@+id/tampilanZona"
+            android:id="@+id/lihatZona"
             android:layout_width="120dp"
             android:layout_height="28dp"
             android:layout_below="@+id/AddZona"
@@ -68,14 +69,14 @@
             android:textSize="12dp"
             android:textStyle="normal" />
         <Button
-            android:id="@+id/siram"
+            android:id="@+id/history"
             android:layout_width="120dp"
             android:layout_height="28dp"
-            android:layout_below="@+id/tampilanZona"
+            android:layout_below="@+id/lihatZona"
             android:layout_centerInParent="true"
             android:layout_marginBottom="10dp"
             android:background="@drawable/bg_ui"
-            android:text="Siram Manual"
+            android:text="History"
             android:textColor="@color/white"
             android:textSize="12dp"
             android:textStyle="normal" />
