--- a/app/src/main/res/layout/list_zona.xml
+++ b/app/src/main/res/layout/list_zona.xml
@@ -34,7 +34,8 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="18dp"
-                android:textStyle="normal" />
+                android:textStyle="normal"
+                android:gravity="center_horizontal" />
 
             <TextView
                 android:id="@+id/txtLihatZona"
@@ -46,16 +47,28 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="18dp"
-                android:textStyle="normal" />
+                android:textStyle="normal"
+                android:gravity="center_horizontal" />
         </LinearLayout>
         <Button
-            android:id="@+id/AddZona"
+            android:id="@+id/aturJadwal"
             android:layout_width="120dp"
             android:layout_height="28dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/bg_ui"
-            android:text="Save"
+            android:text="Atur Jadwal"
+            android:textColor="@color/white"
+            android:textSize="12dp"
+            android:textStyle="normal" />
+        <Button
+            android:id="@+id/siramManual"
+            android:layout_width="120dp"
+            android:layout_height="28dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bg_ui"
+            android:text="Siram Manual"
             android:textColor="@color/white"
             android:textSize="12dp"
             android:textStyle="normal" />
