--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -4,5 +4,8 @@
         <domain includeSubdomains="true">worker1.server.pptik.id</domain>
         <domain includeSubdomains="true">192.168.43.201</domain>
         <domain includeSubdomains="true">192.168.12.100</domain>
+        <domain includeSubdomains="true">192.168.22.185</domain>
+        <domain includeSubdomains="true">192.168.1.105</domain>
+        <domain includeSubdomains="true">192.168.12.103</domain>
     </domain-config>
 </network-security-config>
