--- a/app/src/main/res/layout/activity_atur_jadwal_siram.xml
+++ b/app/src/main/res/layout/activity_atur_jadwal_siram.xml
@@ -17,11 +17,12 @@
         android:id="@+id/tvDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="30dp"
         android:elevation="5dp"
-        android:text="Atur Jadwal dan"
+        android:text="@string/app_name"
+        android:textStyle="italic"
         android:textColor="@color/white"
-        android:textSize="20sp" />
+        android:textSize="25sp" />
     <TextView
         android:id="@+id/tvLogin"
         android:layout_width="wrap_content"
@@ -30,7 +31,7 @@
         android:transitionName="tvLogin"
         android:layout_alignLeft="@+id/tvDesc"
         android:elevation="5dp"
-        android:text="Lama Penyiraman Anda.."
+        android:text="Atur jadwal"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold" />
