--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
         android:layout_marginLeft="25dp"
         android:layout_marginTop="25dp"
         android:elevation="5dp"
-        android:text="SHADOOF"
+        android:text="@string/app_name"
         android:textStyle="italic"
         android:textColor="@color/colorWhite"
         android:textSize="25sp" />
@@ -188,7 +188,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Belum di SHADOOF? "
+                        android:text="Belum di IC-Shadoof? "
                         android:textStyle="bold"
                         android:textSize="16sp" />
 
