--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -273,7 +273,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Sudah Di SHADOOF ? "
+                        android:text="Sudah Di IC-Shadoof ? "
                         android:textStyle="bold"
                         android:textSize="16sp" />
 
