--- a/app/src/main/res/layout/activity_set_zona.xml
+++ b/app/src/main/res/layout/activity_set_zona.xml
@@ -11,7 +11,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/bgHeader"
         android:layout_width="match_parent"
-        android:layout_height="110dp"
+        android:layout_height="150dp"
         android:background="@drawable/header_login"
         android:elevation="5dp" />
     <TextView
@@ -19,14 +19,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/tvDesc"
         android:transitionName="tvLogin"
         android:layout_alignLeft="@+id/tvDesc"
         android:elevation="5dp"
-        android:text="Lahan Anda.."
+        android:text="@string/app_name"
         android:textColor="@color/white"
         android:textSize="20sp"
+        android:textStyle="italic" />
+    <TextView
+        android:id="@+id/tvLog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/tvLogin"
+        android:transitionName="tvLogin"
+        android:layout_alignLeft="@+id/tvDesc"
+        android:elevation="5dp"
+        android:text="Daftarkan Lahan"
+        android:textColor="@color/white"
+        android:textSize="25sp"
         android:textStyle="bold" />
     <ImageView
         android:id="@+id/circle1"
