--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -38,8 +38,9 @@
             android:id="@+id/TextView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_gravity="center"
-            android:text="SHADOOF"
+            android:text="@string/app_name"
             android:textSize="30dp"
             android:textStyle="bold" />
     </LinearLayout>
